--- a/roles/tpm/defaults/main.yml
+++ b/roles/tpm/defaults/main.yml
@@ -2,11 +2,12 @@
 patch_auto_reboot: true
 patch_server: true
 
-tpm_simulator_package: "ibmtpm1332.tar.gz"
 tpm_simulator_install: true
 
-tpm_tss_version: 2.3.1
-tpm_abrmd_version: 2.3.1
+tpm_tss_version: "{{ tpm_tool_version_table[ansible_distribution | lower()][ansible_distribution_version]['tpm_tss_version'] }}"
+tpm_abrmd_version: "{{ tpm_tool_version_table[ansible_distribution | lower()][ansible_distribution_version]['tpm_abrmd_version'] }}"
+tpm_tools_version: "{{ tpm_tool_version_table[ansible_distribution | lower()][ansible_distribution_version]['tpm_tools_version'] }}"
+tpm_simulator_package: "{{ tpm_tool_version_table[ansible_distribution | lower()][ansible_distribution_version]['tpm_simulator_package'] }}"
 
 tpm_enable_hardware_checks: true
 tpm_enable_secure_boot_checks: true
