--- a/roles/tpm/tasks/prereqs.yml
+++ b/roles/tpm/tasks/prereqs.yml
@@ -1,4 +1,4 @@
-- name: Install yum utils and wget
+- name: Install dependencies for this module
   yum:
     state: present
     name:
@@ -9,70 +9,18 @@
   yum:
     name: "@Development tools"
     state: present
-  become: yes
 
-- name: install openssl-devel
-  become: yes
-  package:
-    name: openssl-devel
-    state: latest
-
-- name: install libcmocka-devel
-  become: yes
-  package:
-    name: libcmocka-devel
-    state: latest
-
-- name: install libgcrypt-devel
-  become: yes
-  package:
-    name: libgcrypt-devel
-    state: latest
-
-- name: install uthash-devel
-  become: yes
-  package:
-    name: uthash-devel
-    state: latest
-
-- name: install autoconf-archive
-  become: yes
-  package:
-    name: autoconf-archive
-    state: latest
-
-- name: install libtool
-  become: yes
-  package:
-    name: libtool
-    state: latest
-
-- name: install pkgconfig
-  become: yes
-  package:
-    name: pkgconfig
-    state: latest
-
-- name: install dbus-devel
-  become: yes
-  package:
-    name: dbus-devel
-    state: latest
-
-- name: install glib2-devel
-  become: yes
-  package:
-    name: glib2-devel
-    state: latest
-
-- name: install m4
-  become: yes
-  package:
-    name: m4
-    state: latest
-
-- name: install libcurl-devel
-  become: yes
-  package:
-    name: libcurl-devel
-    state: latest
+- name: Install other Dependencies for the tools
+  yum:
+    name:
+      - openssl-devel
+      - libcmocka-devel
+      - libgcrypt-devel
+      - uthash-devel
+      - autoconf-archive
+      - libtool
+      - pkgconfig
+      - dbus-devel
+      - glib2-devel
+      - m4
+      - libcurl-devel
