rename param for bootloader password

--- a/drp_content/bootenvs/rhel-server-8-3-edge-install.yaml
+++ b/drp_content/bootenvs/rhel-server-8-3-edge-install.yaml
@@ -54,7 +54,7 @@ OptionalParams:
 - ostree/remote
 - ostree/ref
 - ostree/osname
-- bootloader/password
+- secure-edge/bootloader-password
 ReadOnly: true
 RequiredParams: []
 Templates:
