--- a/drp_content/params/secure-edge-bootloader-password.yaml
+++ b/drp_content/params/secure-edge-bootloader-password.yaml
@@ -1,7 +1,7 @@
 Available: true
 Description:  Encrypted Bootloader Password
 Documentation: ""
-Name: bootloader/password
+Name: secure-edge/bootloader-password
 ReadOnly: true
 Schema:
   type: string
