rename ostree-remote param

--- a/drp_content/bootenvs/rhel-server-8-3-edge-install.yaml
+++ b/drp_content/bootenvs/rhel-server-8-3-edge-install.yaml
@@ -51,7 +51,7 @@ OptionalParams:
 - redhat/subscription-repos
 - redhat/subscription-skip-activation
 - redhat/subscription-username
-- ostree/remote
+- secure-edge/ostree-remote
 - ostree/ref
 - ostree/osname
 - secure-edge/bootloader-password
