renames additional params

--- a/drp_content/bootenvs/rhel-server-8-3-edge-install.yaml
+++ b/drp_content/bootenvs/rhel-server-8-3-edge-install.yaml
@@ -52,8 +52,8 @@ OptionalParams:
 - redhat/subscription-skip-activation
 - redhat/subscription-username
 - secure-edge/ostree-remote
-- ostree/ref
-- ostree/osname
+- secure-edge/ostree-ref
+- secure-edge/ostree-osname
 - secure-edge/bootloader-password
 ReadOnly: true
 RequiredParams: []
