--- a/drp_content/params/secure-edge-ostree-osname.yaml
+++ b/drp_content/params/secure-edge-ostree-osname.yaml
@@ -1,7 +1,7 @@
 Available: true
 Description:  Management root for OS installation.
 Documentation: "https://access.redhat.com/documentation/en-us/red_hat_enterprise_linux/8/html/performing_an_advanced_rhel_installation/kickstart-commands-and-options-reference_installing-rhel-as-an-experienced-user"
-Name: ostree/osname
+Name: secure-edge/ostree-osname
 ReadOnly: true
 Schema:
   type: string
