--- a/drp_content/params/secure-edge-ostree-ref.yaml
+++ b/drp_content/params/secure-edge-ostree-ref.yaml
@@ -1,7 +1,7 @@
 Available: true
 Description: Name of the branch from the repository to be used for installation.
 Documentation: "https://access.redhat.com/documentation/en-us/red_hat_enterprise_linux/8/html/performing_an_advanced_rhel_installation/kickstart-commands-and-options-reference_installing-rhel-as-an-experienced-user"
-Name: ostree/ref
+Name: secure-edge/ostree-ref
 ReadOnly: true
 Schema:
   type: string
